--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+Embodiment\Assets\City\NYC_Set_8.FBX
+Embodiment\Assets\City\NYC_Set_8.FBX.meta
+Embodiment\Assets\City\textures\Environment.hdr
+Embodiment\Assets\City\textures\Environment.hdr.meta
+Embodiment\Assets\City\textures\overlay.png.003.png
+Embodiment\Assets\City\textures\overlay.png.003.png.meta
+Embodiment\Assets\City\textures\overlay.png.004.png
+Embodiment\Assets\City\textures\overlay.png.004.png.meta
